# ros_phantom_intelligence

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
cmake_module/: SensorGateway.cmake  SensorGateway_download.cmake.in  SpiritSensorGateway.cmake  SpiritSensorGateway_download.cmake.in  phantom_intelligence_gateway_download.cmake.in  setupCMakeMacros.cmake
dev-script/: setup-env
doc/: mainpage.md
include/ros_phantom_intelligence/: .ros_communication_strategy.h.swp  awl16_connection.h  awl_connection.h  eval_adal6110_16_connection.h  guardian_connection.h  ros_communication_strategy.h  sensor_connection.h  test.h
launch/: awl16.launch  awl16_gazebo.launch  guardian.launch  run_tests.launch
msg/: PhantomIntelligenceFrame.msg  PhantomIntelligenceHeader.msg  PhantomIntelligencePixel.msg  PhantomIntelligenceRawData.msg  PhantomIntelligenceTrack.msg  SpiritFrame.msg
phantom_intelligence/: CMakeLists.txt  package.xml
phantom_intelligence_driver/: CMakeLists.txt  package.xml
phantom_intelligence_driver/cmake-module/: phantom_intelligence_gateway.cmake
phantom_intelligence_msgs/: CMakeLists.txt  package.xml
src/: awl16_node.cpp  guardian_node.cpp
src/driver/: CMakeLists.txt
src/driver/gateway/: test.cpp
src/gateway_driver/: awl16_connection.cpp  awl_connection.cpp  eval_adal6110_16_connection.cpp  guardian_connection.cpp  ros_communication_strategy.cpp  sensor_connection.cpp
src/gazebo_driver/: awl16_gazebo_ros_translator.cpp
src/gazebo_driver/phantom_gazebo_plugins/: gazebo_ros_awl16.cpp  gazebo_ros_awl16.h
src/gazebo_driver/worlds/: awl16.world  romanoff.world
src/lidar_description/awl16/: model.config  model.sdf
src/lidar_description/awl16/meshes/: awl16_back_casing.STL  awl16_body.STL  awl16_window.STL
src/lidar_description/romanoff/: model.config  model.sdf
src/lidar_description/romanoff/meshes/: romanoff_back.stl  romanoff_front.stl  romanoff_window.stl
src/lidar_descritpion/romanoff/: model.sdf
src/lidar_descritpion/romanoff/meshes/: romanoff_body.stl
test/: ros_communication_strategy_publication_test.cpp  test_main.cpp
tutorial/bagfiles/: 2018-07-31-10-10-49.bag  subset.bag
tutorial/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
tutorial/catkin_ws/src/piros_tutorial/: CMakeLists.txt  package.xml
tutorial/catkin_ws/src/piros_tutorial/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
