<?xml version="1.0"?>
<package format="2">
    <name>phantom_intelligence</name>
    <version>0.1.0</version>
    <description>
        ROS support for Phantom Intelligence LiDARs.
    </description>
    <maintainer email="jb.harvey@phantomintelligence.com">Jean-Benoît Harvey</maintainer>
    <author>Jean-Benoît Harvey</author>
    <license>BSD-3-Clause</license>

    <url type="website">https://wiki.ros.org/phantom_intelligence</url>
    <url type="repository">https://github.com/PhantomIntelligence/ros_phantom_intelligence</url>
    <url type="bugtracker">https://github.com/PhantomIntelligence/ros_phantom_intelligence/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gazebo_ros</depend>
    <depend>gazebo_msg</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

    <build_depend>message_generation</build_depend>

    <build_export_depend>message_generation</build_export_depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <test_depend>rostest</test_depend>
    <test_depend>roslaunch</test_depend>

    <doc_depend>doxygen</doc_depend>

</package>
